a7a53c404c46702ee2c99fe4bb8e6d04fd5b7c9c fix: Fix styling issues for split buttons aligning weird
Jira Issue DD-2368

cb29aa1a268eb39b17aa9267a2368b03eae3dd29 Merge branch 'master' of github.com:DataTables/Buttons

Sync to source repo @cb29aa1a268eb39b17aa9267a2368b03eae3dd29

--- a/css/buttons.dataTables.css
+++ b/css/buttons.dataTables.css
@@ -341,6 +341,11 @@ div.dt-button-collection div.dt-btn-split-wrapper button.dt-button {
   flex-grow: 1;
   flex-shrink: 0;
   flex-basis: 50px;
+  margin-top: 0px;
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
 }
 div.dt-button-collection div.dt-btn-split-wrapper button.dt-btn-split-drop {
   min-width: 20px;
@@ -348,6 +353,10 @@ div.dt-button-collection div.dt-btn-split-wrapper button.dt-btn-split-drop {
   flex-grow: 0;
   flex-shrink: 0;
   flex-basis: 0;
+  border-bottom-left-radius: 0px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
 div.dt-button-collection div.dt-btn-split-wrapper:active:not(.disabled) button.dt-button, div.dt-button-collection div.dt-btn-split-wrapper.active:not(.disabled) button.dt-button {
   background-color: #dadada;
